<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        app:showAsAction="collapseActionView"
        android:title="@string/sort_by_name_text">
        <menu>
            <item
                android:id="@+id/option_sort_by_name_desc"
                android:title="@string/sort_by_desc_text"
                />
            <item
                android:id="@+id/option_sort_by_name_asc"
                android:title="@string/sort_by_asc_text"
                />
        </menu>
    </item>
    <item
        app:showAsAction="collapseActionView"
        android:title="@string/sort_by_size_text">
        <menu>
            <item
                android:id="@+id/option_sort_by_size_desc"
                android:title="@string/sort_by_desc_text"
                />
            <item
                android:id="@+id/option_sort_by_size_asc"
                android:title="@string/sort_by_asc_text"
                />
        </menu>
    </item>
    <item
        app:showAsAction="collapseActionView"
        android:title="@string/sort_by_creation_date">
        <menu>
            <item
                android:id="@+id/option_sort_by_creation_date_desc"
                android:title="@string/sort_by_desc_text"
                />
            <item
                android:id="@+id/option_sort_by_creation_date_asc"
                android:title="@string/sort_by_asc_text"
                />
        </menu>
    </item>
    <item
        app:showAsAction="collapseActionView"
        android:title="@string/sort_by_extension_text">
        <menu>
            <item
                android:id="@+id/option_sort_by_extension_desc"
                android:title="@string/sort_by_desc_text"
                />
            <item
                android:id="@+id/option_sort_by_extension_asc"
                android:title="@string/sort_by_asc_text"
                />
        </menu>
    </item>
</menu>